date check and session implemented for prod-upd/del n seller'

--- a/views/seller-screen.ejs
+++ b/views/seller-screen.ejs
@@ -22,6 +22,7 @@
 	<table>
 	<tr>
 	<td><input type="hidden" name="product_id" value="<%=products[i].product_id%>"></td>
+	<td><input type="hidden" name="seller_id" value="<%=products[i].seller_id%>"></td>
 	<td><input type="submit" id="delete" value="Delete" onclick="return submitform(this.id, this.form)"/></td> 
 	<td><input type="submit" id="update" value="Update" onclick="return submitform(this.id, this.form)"/></td>
 	</tr>
