--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,15 @@
 <script src="/js/jquery.slides.min.js"></script>
 <script type="text/javascript" src="/js/ejs_production.js"></script>
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
 <script>
+
+$(document).ready(function(){
+	     $('.carousel').carousel();
+	 });
     		$.ajax({
                     url: "/categories",
                     type: 'GET',
@@ -179,6 +187,29 @@ $("#gh-ac").autocomplete({
 	
 <br/>
 </br>
+
+
+    <div id="myCarousel" class="carousel slide" style="margin-left:180px;width:70%">
+    <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+    <div class="active item"><img src="/images/ebayadv2.jpg"></div>
+    <div class="item"><img src="/images/ebaypic.jpg"></div>
+    <div class="item"><img src="/images/ebayadv1.jpg"></div>
+    </div>
+    <!-- Carousel nav -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev" style="background-image:none">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+	</a>
+
+	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next" style="background-image:none">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+	</a>
+    </div>
 
 
 
