--- a/views/SuccessPage.ejs
+++ b/views/SuccessPage.ejs
@@ -42,9 +42,6 @@
 					width: -webkit-calc(100% + 20px);
 				}
 		</style><style type="text/css"></style>
-		<link rel="stylesheet" href= '/stylesheets/anytime.css' />
- 	<script src="/js/jquery.js"></script>
-	<script src='/js/anytime.js'></script>
 		</head>
 		<body id="body" class="listingPage" style="cursor: default;"><script type="text/javascript"> myfaces.config._autoeval = true; </script><!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script><![endif]--><!-- RcmdId cse,RlogId t6%60vcpfgh%7Fw%3F%3Cdka7e34e*%605ga-14a0591dd83-0xad --><!--[if IE 8]><div class="lt-ie9 ie8"><![endif]--><h1 class="offScr">Fill out the details below to complete your listing.</h1><a href="#mainContent" class="acc-skip-to-mc">Skip to main content</a><div class="header-wrap"><div class="container hidden-phone"><div class="row"><div class="span5"><div class="logo"><a id="lnkHdrLogo" href="http://www.ebay.com/"><img id="imgEbayLogo" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" border="0" alt="eBay logo"></a></div></div><span class="span19"><a id="mainContent" name="mainContent" tabindex="-1"></a><div id="lyrHdrControls" class="controls"></div></span></div></div><div id="mw-hdr" class="visible-phone"><div id="tbdHdr"><div class="cl lgoCl"><a id="lnkHdrLogoMweb" href="http://m.ebay.com/home?mfs=Header"><img id="imgEbayLogoMweb" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" class="headerLogo" border="0" alt="eBay logo"></a></div></div></div></div><div class="hidden-desktop clr scroll-to-fixed-fixed sticky" id="mobileSidebar" style="z-index: 1000; position: fixed; top: 0px; margin-left: 0px; left: 0px;"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap">
 					 
@@ -59,119 +56,9 @@
 		    
 		<span class="tblts"><a id="rmcallmeclk" class="ccclk" available="" href="javascript:;" ur="2"><b class="wcontact-links wcallme rp"></b><span class="mtxt"> Call me </span></a></span>
 		 
-	</span></div><div class="container"><a href="#" onclick="return myfaces.oam.submitForm('selling','lnkSwitchForm');" id="lnkSwitchForm" aria-hidden="hidden" tabindex="-1"></a><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }"><div id="ccSecHdgdescribe" class="section-heading hidden-phone"><h2 id="describe">Welcome...</h2></div>
+	</span></div><div class="container"><a href="#" onclick="return myfaces.oam.submitForm('selling','lnkSwitchForm');" id="lnkSwitchForm" aria-hidden="hidden" tabindex="-1"></a><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }"><div id="ccSecHdgdescribe" class="section-heading hidden-phone"><h2 id="describe">You Have Successfully Signed Up.....</h2></div>
 	<table class="mgtb " role="presentation"><tr><td width="80%" valign="top">
 	<tr><td width="20%" valign="top" id="lcont"><div class="pdLft"><div><div class="si-lr"><div class="si-re"><div class="si-pd"><div class="si-sp si-fl g-hlp si-fn">
-</div>
-<div id="middle">
-		<h3>Add a new product</h3>
-	<form method="post" action="/product/new" name="new_product_form" target="_self">
-	<input type = "hidden" name = "seller_id" value="<%=seller_id%>"/>
-		<table>
-			<tr>
-				<td>Product Name</td>
-				<td><input type="text" name="product_name" required="required"></td>
-			</tr>
-			<tr>
-				<td>Product Description</td>
-				<td><textarea name='product_desc'
-						placeholder="a short description" required="required"></textarea></td>
-			</tr>
-			<tr>
-				<td>Product Category</td>
-				<td><select name="category_id">
-				<%for(var i=0;i<category.length;i++){%>
-         			<option value="<%=category[i].category_id%>"><%=category[i].category_name%></option>
- 				<%}%>
-				</select></td>
-			</tr>
-			<tr>
-				<td>Product Status</td>
-				<td><select name="product_status">
-				<%for(var i=0;i<productStatus.length;i++){%>
-         			<option value="<%=productStatus[i]%>"><%=productStatus[i]%></option>
- 				<%}%>
-				</select></td>
-			</tr>
-			<tr>
-				<td>Product Condition</td>
-				<td><select name="product_condition">
-				<%for(var i=0;i<productCondition.length;i++){%>
-         			<option value="<%=productCondition[i]%>"><%=productCondition[i]%></option>
- 				<%}%>
-				</select></td>
-			</tr>
-			<tr>
-				<td>Mode Of Sale</td>
-				<td><select name="sell_mode" id="sell_mode" required='required'>
-						<option>choose mode</option>
-					<% for(var i=0; i<sell_mode.length; i++){%>
-   						<option value="<%=sell_mode[i]%>"><%=sell_mode[i]%></option>
- 					<%}%>
-					</select>
-				</td>
-			</tr>
-		</table>
-	<div id='fixed-price' style="display: none">
-		<table>
-			<tr>
-				<td>Units In Stock</td>
-				<td><input type="text" name="units_in_stock"></td>
-			</tr>
-			<tr>
-				<td>Price per unit</td>
-				<td><input type='text' name='price_per_unit'/></td>
-			</tr>
-		</table>
-	</div>
-
-
-	<div id='auction' style="display: none">
-		<table>
-			<tr>
-				<td>Expiry Date</td>
-				<td><input type="text" name='bid_expiry' id="date" /></td>
-			</tr>
-			<tr>
-				<td>Bid Start Amount in dollars:</td>
-				<td><input type='text' name='start_amount'></td>
-			</tr>
-		</table>
-	</div>
-	<table>
-		<tr><td><input type="submit" value="Create Product"></td></tr>
-		<tr><td><input type="button" onClick="location.href='/seller/<%=seller_id%>'" value="Cancel"></td></tr>
-					
-	</table>
-	</form>
-	</div>
-	
-<script>
-  AnyTime.picker( "date");
-  
-  $('#sell_mode').change(function(){
-
-	   var selection = $(this).val();
-	   if(selection == 'Fixed-Price')
-	   {
-	      $('#fixed-price').show();
-	      $('#auction').hide();
-	      $('input[name=price_per_unit]').prop('required',true);
-	      $('input[name=units_in_stock]').prop('required',true);
-	        $('input[name=bid_expiry]').prop('required',false);
-	      $('input[name=start_amount]').prop('required',false);
-	   }
-	   else
-	   {
-		   $('#fixed-price').hide();
-	      $('#auction').show();
-	      $('input[name=bid_expiry]').prop('required',true);
-	      $('input[name=start_amount]').prop('required',true);
-	            $('input[name=price_per_unit]').prop('required',false);
-	      $('input[name=units_in_stock]').prop('required',false);
-	   } 
-
-	});
-  </script></form>
+<h2><b>You can Sign in from here...</b></h2></div><form action="/team6ebay/login" method="get" id="signinForm" name="signinForm"><span><input id="w1-3" class="btn btn-ter" type="submit" value="Sign in"></span></form>
 </div></div></div></div></div></td></tr></table>
 	</body></html>
