--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -1,13 +1,68 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Edit Product</title>
-   
-     	<link rel="stylesheet" href= '/stylesheets/anytime.css' />
+<html class="locale-us" lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><link rel="stylesheet" media="screen" type="text/css" href="/javax.faces.resource/primefaces.css.jsf?ln=primefaces&amp;v=4.0"><script type="text/javascript" src="/javax.faces.resource/jquery/jquery.js.jsf?ln=primefaces&amp;v=4.0"><!--
+
+//--></script><script type="text/javascript" src="/javax.faces.resource/primefaces.js.jsf?ln=primefaces&amp;v=4.0"><!--
+
+//--></script><script type="text/javascript" src="/javax.faces.resource/jsf.js.jsf?ln=javax.faces"><!--
+
+//--></script><title>Sell on eBay</title>
+<!-- meta --><meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+<meta http-equiv="cache-control" content="max-age=0"><meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="0"><meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
+<meta http-equiv="pragma" content="no-cache"><meta name="description" content="Sell your item"><meta name="keywords" content="Sell your item">
+<!-- css --><!-- Error build tag(class com.ebay.webres.resource.tag.UseScriptTag) with value()! -->
+<link href="http://ir.ebaystatic.com/rs/v/xk1u5344s2zmlfyjikhwx0zzkq5.css" type="text/css" rel="stylesheet"><style type="text/css">
+			.form-select-wrap select {
+				width: 120%;
+				width: calc(100% + 20px);
+				width: -moz-calc(100% + 20px);
+				width: -webkit-calc(100% + 20px);
+			}
+			
+			@media (max-width: 480px), (max-width: 580px) {
+				.form-select-wrap select{
+					width: calc(100% + 45px);
+					width: -moz-calc(100% + 45px);
+					width: -webkit-calc(100%);
+				}
+				
+				.dd{
+					width: calc(100% + 20px);
+					width: -webkit-calc(100% + 20px);
+				}
+				
+				.shipType.row-fluid{
+					width: calc(100% + 20px);
+					width: -webkit-calc(100% + 20px);
+				}
+			}
+			
+			.androidOnly .dd{
+					width: calc(100% + 20px);
+					width: -webkit-calc(100% + 20px);
+				}
+		</style><style type="text/css"></style>
+		<link rel="stylesheet" href= '/stylesheets/anytime.css' />
  	<script src="/js/jquery.js"></script>
 	<script src='/js/anytime.js'></script>
-  </head>
-  <body>
+		</head>
+		<body id="body" class="listingPage" style="cursor: default;"><script type="text/javascript"> myfaces.config._autoeval = true; </script><!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script><![endif]--><!-- RcmdId cse,RlogId t6%60vcpfgh%7Fw%3F%3Cdka7e34e*%605ga-14a0591dd83-0xad --><!--[if IE 8]><div class="lt-ie9 ie8"><![endif]--><h1 class="offScr">Fill out the details below to complete your listing.</h1><a href="#mainContent" class="acc-skip-to-mc">Skip to main content</a><div class="header-wrap"><div class="container hidden-phone"><div class="row"><div class="span5"><div class="logo"><a id="lnkHdrLogo" href="http://www.ebay.com/"><img id="imgEbayLogo" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" border="0" alt="eBay logo"></a></div></div><span class="span19"><a id="mainContent" name="mainContent" tabindex="-1"></a><div id="lyrHdrControls" class="controls"></div></span></div></div><div id="mw-hdr" class="visible-phone"><div id="tbdHdr"><div class="cl lgoCl"><a id="lnkHdrLogoMweb" href="http://m.ebay.com/home?mfs=Header"><img id="imgEbayLogoMweb" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" class="headerLogo" border="0" alt="eBay logo"></a></div></div></div></div><div class="hidden-desktop clr scroll-to-fixed-fixed sticky" id="mobileSidebar" style="z-index: 1000; position: fixed; top: 0px; margin-left: 0px; left: 0px;"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap">
+					 
+<div id="feesItemized"><div class="fees-itemized-wrap"><h2>Listing fees</h2><div class="row-fluid fee"><div class="span16 fee-detail">Insertion fees:
+								</div><div class="span6 fee-amount pull-right">Free
+								</div></div><div class="row-fluid total"><div class="span12 fee-detail">Total:</div><div class="span12 pull-right fees-total fee-amount">Free
+							</div></div><div id="feesItemizedClose" class="close fees-close"><a href="javascript:;">Close<abbr class="offScr">&nbsp;fees layer</abbr><b class="closeImg"></b></a></div></div></div><span id="mobileinflow"><span class="tblts lm"><a id="rmfaqclk" class="ccclk" href="javascript:;"><b class="rfaqs rp"></b><span class="mtxt"> Help </span></a></span>
+		
+		<span class="tblts"><a id="rmchatclk" class="ccclk" redirecturl="http://ocs.ebay.com/ws/eBayISAPI.dll?ChatWithUs&amp;ebayConvID=0d395561-cec7-4dd3-8186-26e336167a4d&amp;ebayTopicID=2798&amp;ebayConvUnitID=0&amp;ebaySegmentId=10002&amp;ebayCCR=9062" available="" href="javascript:;"><b class="wcontact-links wchat rp"></b><span class="mtxt"> Live chat </span></a></span>
+		    
+		<span class="tblts"><a id="rmcallclk" class="ccclk" available="" href="javascript:;" ur="0"><b class="wcontact-links wcall rp"></b><span class="mtxt"> Call us </span></a></span>
+		    
+		<span class="tblts"><a id="rmcallmeclk" class="ccclk" available="" href="javascript:;" ur="2"><b class="wcontact-links wcallme rp"></b><span class="mtxt"> Call me </span></a></span>
+		 
+	</span></div><div class="container"><a href="#" onclick="return myfaces.oam.submitForm('selling','lnkSwitchForm');" id="lnkSwitchForm" aria-hidden="hidden" tabindex="-1"></a><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }"><div id="ccSecHdgdescribe" class="section-heading hidden-phone"><h2 id="describe">Welcome...</h2></div>
+	<table class="mgtb " role="presentation"><tr><td width="80%" valign="top">
+	<tr><td width="20%" valign="top" id="lcont"><div class="pdLft"><div><div class="si-lr"><div class="si-re"><div class="si-pd"><div class="si-sp si-fl g-hlp si-fn">
+</div>
 <div id="middle">
 		<h3>Edit a listed product</h3>
 	<form method="post" action="/product/update" name="edit_product_form" target="_self">
@@ -128,5 +183,4 @@
 
 	});
 	</script>
-  </body>
-</html>
+	</body></html>
