get customer info by id paramter not from session

--- a/public/templates/personGrid.ejs
+++ b/public/templates/personGrid.ejs
@@ -10,7 +10,7 @@
 					</div>
 				</div>
 				<h3 class="lvtitle">
-					<a href="" class="vip" style="display:block" title="Click this link to access <%=data[i].person_fname%>"><%=data[i].person_fname%></a>
+					<a href="/customer/<%=data[i].person_id%>" class="vip" style="display:block" title="Click this link to access <%=data[i].person_fname%>"><%=data[i].person_fname%></a>
 				</h3>
 				<ul class="lvprices left space-zero" style="list-style:none outside none">
 					<li class="lvextras">
