customer home scroll bar

--- a/views/customerhome.ejs
+++ b/views/customerhome.ejs
@@ -92,7 +92,7 @@ $("#gh-ac").autocomplete({
     
   </script>
 </head>
-<body class="sz1200 index redux today stdln en_US rvi">
+<body class="sz1200 index redux today stdln en_US rvi" style ="overflow-y:auto">
 <div id="gh-gb" tabindex="-1"></div>
 <div class="header">
 	<div class="gh-acc-exp-div">
