removed person_type

--- a/views/personSearch.ejs
+++ b/views/personSearch.ejs
@@ -279,8 +279,8 @@ $("#mem_id").autocomplete({
 						<input aria-labelledby="kw_lengend" name="mem_id" id="mem_id" size="50" maxlength="300" value="" placeholder="Enter membership id" type="text">
 						</div>
 						</div>
-						<div id="person_type" style="display:inline-block;width:30%;position:absolute;margin-left:120px" class="checkbox-set"><legend>Person type</legend></div>
-						<button type="submit" class="btn btn-prim" style="margin-left:400px;" onclick="search()">Search</button>
+						<!--<div id="person_type" style="display:inline-block;width:30%;position:absolute;margin-left:120px" class="checkbox-set"><legend>Person type</legend></div>-->
+						<button type="submit" class="btn btn-prim" style="margin-left:200px;" onclick="search()">Search</button>
 					</fieldset>
 					
 			</div>
