remove myEbay from index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -172,7 +172,7 @@ $("#gh-ac").autocomplete({
 		<ul id="gh-eb">
 			<li id="gh-eb-My" class="gh-eb-li gh-dd" data-imp="10">
 				<div class="gh-menu">
-					<a href="http://my.ebay.com/ws/eBayISAPI.dll?MyEbay&amp;gbh=1" _sp="m570.l2919" class="gh-eb-li-a">My eBay</a>
+					<!--<a href="http://my.ebay.com/ws/eBayISAPI.dll?MyEbay&amp;gbh=1" _sp="m570.l2919" class="gh-eb-li-a">My eBay</a>-->
 				</div>
 			</li>
 		</ul>
